--- a/frontend-web/index.html
+++ b/frontend-web/index.html
@@ -7,38 +7,6 @@
 </head>
 <body>
 <div id="map"></div>
-<script type="text/javascript">
-	var map = new ol.Map({
-		target: 'map',
-		layers: [
-			new ol.layer.Tile({
-				source: new ol.source.OSM()
-			}),
-			new ol.layer.Heatmap({
-				source: new ol.source.Vector({
-				format: new ol.format.GeoJSON(),
-				loader: function(extent, resolution, projection) {
-					var xhr = new XMLHttpRequest();
-					xhr.open('GET', url);
-					xhr.onload = function() {
-						if (xhr.status == 200) {
-							map.addFeatures(
-									map.getFormat().readFeatures(xhr.responseText));
-						} else {
-							onError();
-						}
-					}
-					xhr.send();
-				},
-				strategy: ol.loadingstrategy.bbox
-			 })
-			})
-		],
-		view: new ol.View({
-			center: ol.proj.fromLonLat([12.110148, 54.123435]),
-			zoom: 12
-		})
-	});
-</script>
+<script type="text/javascript" src="map.js"></script>
 </body>
 </html>
