--- a/frontend-web/index.html
+++ b/frontend-web/index.html
@@ -3,14 +3,20 @@
 <head>
 	<title>PEACE finder</title>
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-	<link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
+	<link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.green-red.min.css">
 	<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="index.css">
 	<script src="https://openlayers.org/en/v4.6.5/build/ol.js" type="text/javascript"></script>
 </head>
 <body>
 <div id="map"></div>
-<div id="map-overlay" class="mdl-card mdl-shadow--2dp"></div>
+<div id="map-overlay" class="mdl-card mdl-shadow--2dp">
+	<div class="mdl-card__title">
+		<h2 class="mdl-card__title-text">Optionen</h2>
+	</div>
+	<div id="map-overlay-options" class="mdl-card__supporting-text">
+	</div>
+</div>
 <script type="text/javascript" src="map.js"></script>
 <script type="text/javascript">
 	downloadMapLayers();
