--- a/frontend-web/index.html
+++ b/frontend-web/index.html
@@ -10,11 +10,21 @@
 </head>
 <body>
 <div id="map"></div>
-<div id="map-overlay" class="mdl-card mdl-shadow--2dp">
-	<div class="mdl-card__title">
-		<h2 class="mdl-card__title-text">Optionen</h2>
+<div id="map-overlays">
+	<div id="search-bar" class="mdl-card mdl-shadow--2dp">
+		<div class="mdl-card__supporting-text">
+			<div class="mdl-textfield mdl-js-textfield">
+				<input class="mdl-textfield__input" type="text" id="search-input">
+				<label class="mdl-textfield__label" for="sample1">Suche</label>
+			</div>
+		</div>
 	</div>
-	<div id="map-overlay-options" class="mdl-card__supporting-text">
+	<div id="map-overlay" class="mdl-card mdl-shadow--2dp">
+		<div class="mdl-card__title">
+			<h2 class="mdl-card__title-text">Optionen</h2>
+		</div>
+		<div id="map-overlay-options" class="mdl-card__supporting-text">
+		</div>
 	</div>
 </div>
 <script type="text/javascript" src="map.js"></script>
